# gm_open

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Main.cpp  Main.cpp~  Makefile  Mesh.cpp  Mesh.h  README  Scene.cpp  Scene.h  Triangle.h  Vertex.cpp  Vertex.h  Window.h  cmake_install.cmake  glcolor.h  glviewer.cpp  gm_open  gm_open.pro  gmopen  mesh.cpp  mesh.h  vertex.h  window.cpp
driver/: CMakeLists.txt  Makefile  cmake_install.cmake  epoc_libusb.c~  libepoc.h~
find/: .directory  FindQGLViewer.cmake
image/: .directory
models/: .directory  brain.off  brainL.off  eeg1020.off  newbrain.off  sphereL.off  sphereM.off  sphereX.off
models/brains/: .directory  brain.obj~
src/: .directory  gm_open.pro  main.cpp
src/driver/: .directory  epoc.c  epoc_libusb.c  libepoc.h
src/gm_open-build-desktop/: Makefile
src/gui/: .directory  checkbox.h  edge.h  eegcoord.cpp  eegcoord.h  epoc.cpp  epoc.h  glcolor.cpp  glcolor.h  glviewer.cpp  glviewer.cpp~  glviewer.h  glviewer.h~  gm_open.pro  mesh.cpp  mesh.cpp~  mesh.h  mesh.h~  moc_glviewer.cxx  moc_window.cxx  param.cpp  param.h  slider.h  spinbox.h  triangle.cpp  triangle.h  vec3D.h  vec3D.h~  vertex.cpp  vertex.h  window.cpp  window.cpp~  window.h
utils/: .directory  rotator  rotator.cpp  spherer  spherer.cpp  translater  translater.cpp
